[package]
name = "sassi"
description = "Simple Agent Simulated Swarm Intelligence"
version = "0.0.1"
readme = "README.md"
repository = "https://github.com/jade-tea-h/sassi/"
authors = ["Jade <jade.topaz@proton.me>"]
license = "MIT OR Apache-2.0"
edition = "2021"
keywords = ["swarm", "ai", "emergent"]
categories = ["science"]

[dependencies]
